tests/samples/negative/functions/c_abi_inferred_return.ax
module c_abi_inferred_return;

@name("aurex_bad_export")
export c fn exported() {
    return;
}
